fix: update font size for testimonials on mobile view for better readability

--- a/styles/components/testimonies.scss
+++ b/styles/components/testimonies.scss
@@ -117,7 +117,7 @@
             max-width: pxToRem(971);
 
             @media only screen and (max-width: pxToRem(768)) {
-              font-size: pxToRem(16);
+              font-size: pxToRem(18);
               line-height: 150%;
             }
           }
